tutorial/testingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-from-k8s-to-httpbin
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: hello-minikube1
            port:
              number: 8080
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: proxy-to-httpbin
            port:
              number: 80
